Reduce startup costs
This largely focuses on reducing memory allocations.

There are also some conversions to Java 17 standards.

Signed-off-by: Taylor Smock <tsmock@meta.com>