@@ -4,6 +4,7 @@ package org.openstreetmap.josm.plugins.mapwithai.gui.preferences.mapwithai;
 import static org.openstreetmap.josm.tools.I18n.marktr;
 import static org.openstreetmap.josm.tools.I18n.tr;
 
+import javax.annotation.Nonnull;
 import javax.swing.AbstractAction;
 import javax.swing.Box;
 import javax.swing.JButton;
@@ -18,7 +19,6 @@ import javax.swing.UIManager;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
 import javax.swing.table.DefaultTableCellRenderer;
-import javax.swing.table.TableColumnModel;
 
 import java.awt.Color;
 import java.awt.Component;
@@ -28,8 +28,8 @@ import java.awt.GridBagLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.awt.geom.Rectangle2D;
 import java.io.IOException;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -37,7 +37,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Future;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -47,13 +46,10 @@ import java.util.stream.Stream;
 import org.openstreetmap.gui.jmapviewer.Coordinate;
 import org.openstreetmap.gui.jmapviewer.MapPolygonImpl;
 import org.openstreetmap.gui.jmapviewer.MapRectangleImpl;
-import org.openstreetmap.gui.jmapviewer.interfaces.ICoordinate;
 import org.openstreetmap.gui.jmapviewer.interfaces.MapPolygon;
 import org.openstreetmap.gui.jmapviewer.interfaces.MapRectangle;
 import org.openstreetmap.josm.data.Bounds;
 import org.openstreetmap.josm.data.coor.LatLon;
-import org.openstreetmap.josm.data.imagery.ImageryInfo.ImageryBounds;
-import org.openstreetmap.josm.data.imagery.Shape;
 import org.openstreetmap.josm.data.preferences.NamedColorProperty;
 import org.openstreetmap.josm.gui.MainApplication;
 import org.openstreetmap.josm.gui.bbox.SlippyMapBBoxChooser;
@@ -92,6 +88,7 @@ public class MapWithAIProvidersPanel extends JPanel {
         SHOW_ACTIVE
     }
 
+    @Serial
     private static final long serialVersionUID = -5876039771496409422L;
     // Public JTables and JosmMapViewer
     /** The table of active providers **/
@@ -112,9 +109,9 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     // Public models
     /** The model of active providers **/
-    public static final MapWithAILayerTableModel ACTIVE_MODEL = new MapWithAILayerTableModel();
+    static final MapWithAILayerTableModel ACTIVE_MODEL = new MapWithAILayerTableModel();
     /** The model of default providers **/
-    public static final MapWithAIDefaultLayerTableModel DEFAULT_MODEL = new MapWithAIDefaultLayerTableModel();
+    static final MapWithAIDefaultLayerTableModel DEFAULT_MODEL = new MapWithAIDefaultLayerTableModel();
 
     // Public JToolbars
     /** The toolbar on the right of active providers **/
@@ -188,24 +185,24 @@ public class MapWithAIProvidersPanel extends JPanel {
         public final Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected,
                 boolean hasFocus, int row, int column) {
             T obj = (T) value;
-            JLabel label = (JLabel) super.getTableCellRendererComponent(table, mapper.apply(obj), isSelected, hasFocus,
-                    row, column);
-            Color defaultColor = UIManager.getColor("Table.background");
-            Color selectedColor = UIManager.getColor("Table.selectionBackground");
+            final var label = (JLabel) super.getTableCellRendererComponent(table, mapper.apply(obj), isSelected,
+                    hasFocus, row, column);
+            final var defaultColor = UIManager.getColor("Table.background");
+            final var selectedColor = UIManager.getColor("Table.selectionBackground");
             GuiHelper.setBackgroundReadable(label, defaultColor);
 
             GuiHelper.setBackgroundReadable(label, isSelected ? selectedColor : defaultColor);
             if (this.highlightIfActive && obj != null) {
-                MapWithAIInfo info = obj instanceof MapWithAIInfo ? (MapWithAIInfo) obj : reverseMapper.apply(obj);
+                final var info = obj instanceof MapWithAIInfo ? (MapWithAIInfo) obj : reverseMapper.apply(obj);
                 if (info == null) {
                     GuiHelper.setBackgroundReadable(label, defaultColor);
                 } else {
                     if (MapWithAILayerTableModel.contains(info)) {
-                        Color t = IMAGERY_BACKGROUND_COLOR.get();
+                        final var t = IMAGERY_BACKGROUND_COLOR.get();
                         GuiHelper.setBackgroundReadable(label, isSelected ? t.darker() : t);
                     } else if (this.area != null && info.getBounds() != null
                             && (this.area.intersects(info.getBounds()) || info.getBounds().intersects(this.area))) {
-                        Color t = MAPWITHAI_AREA_BACKGROUND_COLOR.get();
+                        final var t = MAPWITHAI_AREA_BACKGROUND_COLOR.get();
                         GuiHelper.setBackgroundReadable(label, isSelected ? t.darker() : t);
                     } else {
                         GuiHelper.setBackgroundReadable(label, isSelected ? selectedColor : defaultColor);
@@ -300,11 +297,32 @@ public class MapWithAIProvidersPanel extends JPanel {
     private static class MapWithAINameTableCellRenderer
             extends MapWithAIProvidersPanel.MapWithAITableCellRenderer<MapWithAIInfo> {
 
+        @Serial
         private static final long serialVersionUID = 6669934435517244629L;
 
         MapWithAINameTableCellRenderer(boolean showActive) {
             super(info -> info == null ? null : info.getName(), i -> null, MapWithAIInfo::getToolTipText, null,
                     showActive);
+        }
+    }
+
+    private static class ProvidersTable extends JTable {
+        @Serial
+        private static final long serialVersionUID = -6136421378119093719L;
+
+        ProvidersTable() {
+            super(ACTIVE_MODEL);
+        }
+
+        @Override
+        public String getToolTipText(@Nonnull MouseEvent e) {
+            final var p = e.getPoint();
+            try {
+                return ACTIVE_MODEL.getValueAt(rowAtPoint(p), columnAtPoint(p)).toString();
+            } catch (ArrayIndexOutOfBoundsException ex) {
+                Logging.debug(ex);
+                return null;
+            }
         }
     }
 
@@ -320,21 +338,7 @@ public class MapWithAIProvidersPanel extends JPanel {
         this.options = options;
         boolean showActive = Arrays.asList(options).contains(Options.SHOW_ACTIVE);
 
-        activeTable = new JTable(ACTIVE_MODEL) {
-
-            private static final long serialVersionUID = -6136421378119093719L;
-
-            @Override
-            public String getToolTipText(MouseEvent e) {
-                java.awt.Point p = e.getPoint();
-                try {
-                    return ACTIVE_MODEL.getValueAt(rowAtPoint(p), columnAtPoint(p)).toString();
-                } catch (ArrayIndexOutOfBoundsException ex) {
-                    Logging.debug(ex);
-                    return null;
-                }
-            }
-        };
+        activeTable = new ProvidersTable();
         activeTable.putClientProperty("terminateEditOnFocusLost", Boolean.TRUE);
 
         defaultTable = new JTable(DEFAULT_MODEL);
@@ -346,25 +350,25 @@ public class MapWithAIProvidersPanel extends JPanel {
 
         setupDefaultTable(defaultTable, options, areaListeners);
 
-        TableColumnModel mod = activeTable.getColumnModel();
+        final var mod = activeTable.getColumnModel();
         mod.getColumn(1).setPreferredWidth(800);
-        MapWithAIURLTableCellRenderer activeTableCellRenderer = new MapWithAIURLTableCellRenderer();
+        final var activeTableCellRenderer = new MapWithAIURLTableCellRenderer();
         areaListeners.addListener(activeTableCellRenderer);
         mod.getColumn(1).setCellRenderer(activeTableCellRenderer);
         mod.getColumn(0).setMaxWidth(200);
 
-        RemoveEntryAction remove = new RemoveEntryAction();
+        final var remove = new RemoveEntryAction();
         activeTable.getSelectionModel().addListSelectionListener(remove);
 
-        EditEntryAction edit = new EditEntryAction();
+        final var edit = new EditEntryAction();
         activeTable.getSelectionModel().addListSelectionListener(edit);
 
         add(new JLabel(tr("Available default entries:")), GBC.std().insets(5, 5, 0, 0));
         add(new JLabel(tr("Boundaries of selected MapWithAI entries:")), GBC.eol().insets(5, 5, 0, 0));
 
         // Add default item list
-        JPanel defaultPane = new JPanel(new GridBagLayout());
-        JScrollPane scrolldef = new JScrollPane(defaultTable);
+        final var defaultPane = new JPanel(new GridBagLayout());
+        final var scrolldef = new JScrollPane(defaultTable);
         scrolldef.setPreferredSize(new Dimension(200, 200));
         defaultPane.add(defaultFilter, GBC.eol().insets(0, 0, 0, 0).fill(GridBagConstraints.HORIZONTAL));
         defaultPane.add(scrolldef, GBC.eol().insets(0, 0, 0, 0).fill(GridBagConstraints.BOTH));
@@ -384,10 +388,10 @@ public class MapWithAIProvidersPanel extends JPanel {
         defaultMap.setZoomControlsVisible(false);
         defaultMap.setMinimumSize(new Dimension(100, 200));
         defaultMap.addJMVListener(e -> {
-            Rectangle2D visibleRect = defaultMap.getVisibleRect();
-            ICoordinate max = defaultMap.getPosition((int) visibleRect.getMaxX(), (int) visibleRect.getMaxY());
-            ICoordinate min = defaultMap.getPosition((int) visibleRect.getMinX(), (int) visibleRect.getMinY());
-            Bounds b = new Bounds(
+            final var visibleRect = defaultMap.getVisibleRect();
+            final var max = defaultMap.getPosition((int) visibleRect.getMaxX(), (int) visibleRect.getMaxY());
+            final var min = defaultMap.getPosition((int) visibleRect.getMinX(), (int) visibleRect.getMinY());
+            final var b = new Bounds(
                     new LatLon(Math.min(max.getLat(), min.getLat()),
                             LatLon.toIntervalLon(Math.min(max.getLon(), min.getLon()))),
                     new LatLon(Math.max(max.getLat(), min.getLat()),
@@ -411,15 +415,15 @@ public class MapWithAIProvidersPanel extends JPanel {
         defaultToolbar.add(new ReloadAction());
         add(defaultToolbar, GBC.eol().anchor(GBC.SOUTH).insets(0, 0, 5, 0));
 
-        HtmlPanel help = new HtmlPanel(
+        final var help = new HtmlPanel(
                 tr("New default entries can be added in the <a href=\"{0}\">GitHub Repository</a>.",
                         "https://github.com/JOSM/MapWithAI/blob/pages/json/sources.json"));
         help.enableClickableHyperlinks();
         add(help, GBC.eol().insets(10, 0, 0, 0).fill(GBC.HORIZONTAL));
 
-        ActivateAction activate = new ActivateAction();
+        final var activate = new ActivateAction();
         defaultTable.getSelectionModel().addListSelectionListener(activate);
-        JButton btnActivate = new JButton(activate);
+        final var btnActivate = new JButton(activate);
 
         middleToolbar = new JToolBar(JToolBar.HORIZONTAL);
         middleToolbar.setFloatable(false);
@@ -430,7 +434,7 @@ public class MapWithAIProvidersPanel extends JPanel {
 
         add(Box.createHorizontalGlue(), GBC.eol().fill(GridBagConstraints.HORIZONTAL));
 
-        JScrollPane scroll = new JScrollPane(activeTable);
+        final var scroll = new JScrollPane(activeTable);
         scroll.setPreferredSize(new Dimension(200, 200));
 
         activeToolbar = new JToolBar(JToolBar.VERTICAL);
@@ -452,7 +456,7 @@ public class MapWithAIProvidersPanel extends JPanel {
             ListenerList<AreaListener> areaListeners) {
         boolean showActive = Arrays.asList(options).contains(Options.SHOW_ACTIVE);
         int tenXWidth = defaultTable.getFontMetrics(defaultTable.getFont()).stringWidth("XXXXXXXXXX");
-        TableColumnModel mod = defaultTable.getColumnModel();
+        final var mod = defaultTable.getColumnModel();
         int urlWidth = (showActive ? 3 : 0) * tenXWidth;
         mod.getColumn(6).setCellRenderer(defaultTable.getDefaultRenderer(Boolean.class));
         mod.getColumn(6).setMaxWidth(20);
@@ -461,13 +465,13 @@ public class MapWithAIProvidersPanel extends JPanel {
         mod.getColumn(4).setPreferredWidth((showActive ? 2 : 0) * tenXWidth);
         mod.getColumn(4).setCellRenderer(new MapWithAIProviderTableCellRenderer());
         mod.getColumn(3).setPreferredWidth(urlWidth);
-        MapWithAIURLTableCellRenderer defaultUrlTableCellRenderer = new MapWithAIURLTableCellRenderer();
+        final var defaultUrlTableCellRenderer = new MapWithAIURLTableCellRenderer();
         mod.getColumn(3).setCellRenderer(defaultUrlTableCellRenderer);
         mod.getColumn(2).setPreferredWidth((int) ((showActive ? 0 : 0.3) * tenXWidth));
 
         mod.getColumn(2).setCellRenderer(new MapWithAITypeTableCellRenderer());
 
-        MapWithAINameTableCellRenderer defaultNameTableCellRenderer = new MapWithAINameTableCellRenderer(!showActive);
+        final var defaultNameTableCellRenderer = new MapWithAINameTableCellRenderer(!showActive);
         mod.getColumn(1).setCellRenderer(defaultNameTableCellRenderer);
         mod.getColumn(1).setPreferredWidth((showActive ? 3 : 2) * tenXWidth);
         mod.getColumn(0).setCellRenderer(new MapWithAICategoryTableCellRenderer());
@@ -496,25 +500,22 @@ public class MapWithAIProvidersPanel extends JPanel {
      * @param e The MouseEvent (used to get the appropriate JTable)
      */
     private static void clickListener(MouseEvent e) {
-        if (e.getSource() instanceof JTable) {
-            JTable table = (JTable) e.getSource();
-            if (table.getSelectedRow() >= 0 && table.getSelectedColumn() >= 0) {
-                int realCol = table.convertColumnIndexToModel(table.getSelectedColumn());
-                int realRow = table.convertRowIndexToModel(table.getSelectedRow());
-                String tableName = table.getModel().getColumnName(realCol);
-                if (tr("License").equals(tableName)) {
-                    MapWithAIInfo info = MapWithAIDefaultLayerTableModel.getRow(realRow);
-                    if (info.getTermsOfUseURL() != null) {
-                        OpenBrowser.displayUrl(info.getTermsOfUseURL());
-                    }
-                } else if (tr("Enabled").equals(tableName)) {
-                    MapWithAIInfo info = MapWithAIDefaultLayerTableModel.getRow(realRow);
-                    MapWithAILayerInfo instance = MapWithAILayerInfo.getInstance();
-                    if (instance.getLayers().contains(info)) {
-                        instance.remove(info);
-                    } else {
-                        instance.add(info);
-                    }
+        if (e.getSource() instanceof JTable table && table.getSelectedRow() >= 0 && table.getSelectedColumn() >= 0) {
+            final int realCol = table.convertColumnIndexToModel(table.getSelectedColumn());
+            final int realRow = table.convertRowIndexToModel(table.getSelectedRow());
+            final var tableName = table.getModel().getColumnName(realCol);
+            if (tr("License").equals(tableName)) {
+                final var info = MapWithAIDefaultLayerTableModel.getRow(realRow);
+                if (info.getTermsOfUseURL() != null) {
+                    OpenBrowser.displayUrl(info.getTermsOfUseURL());
+                }
+            } else if (tr("Enabled").equals(tableName)) {
+                final var info = MapWithAIDefaultLayerTableModel.getRow(realRow);
+                final var instance = MapWithAILayerInfo.getInstance();
+                if (instance.getLayers().contains(info)) {
+                    instance.remove(info);
+                } else {
+                    instance.add(info);
                 }
             }
         }
@@ -585,17 +586,17 @@ public class MapWithAIProvidersPanel extends JPanel {
          * @param i model index
          */
         private void updateBoundsAndShapes(int i) {
-            ImageryBounds bounds = MapWithAIDefaultLayerTableModel.getRow(i).getBounds();
+            final var bounds = MapWithAIDefaultLayerTableModel.getRow(i).getBounds();
             if (bounds != null) {
                 int viewIndex = defaultTable.convertRowIndexToView(i);
-                List<Shape> shapes = bounds.getShapes();
+                final var shapes = bounds.getShapes();
                 if (shapes != null && !shapes.isEmpty()) {
                     if (defaultTable.getSelectionModel().isSelectedIndex(viewIndex)) {
                         mapPolygons.computeIfAbsent(i, key -> {
-                            List<MapPolygon> list = new ArrayList<>();
+                            final var list = new ArrayList<MapPolygon>(shapes.size());
                             // Add new map polygons
-                            for (Shape shape : shapes) {
-                                MapPolygon polygon = new MapPolygonImpl(shape.getPoints());
+                            for (var shape : shapes) {
+                                final var polygon = new MapPolygonImpl(shape.getPoints());
                                 list.add(polygon);
                                 defaultMap.addMapPolygon(polygon);
                             }
@@ -603,7 +604,7 @@ public class MapWithAIProvidersPanel extends JPanel {
                         });
                     } else if (mapPolygons.containsKey(i)) {
                         // Remove previously drawn map polygons
-                        for (MapPolygon polygon : mapPolygons.get(i)) {
+                        for (var polygon : mapPolygons.get(i)) {
                             defaultMap.removeMapPolygon(polygon);
                         }
                         mapPolygons.remove(i);
@@ -613,9 +614,9 @@ public class MapWithAIProvidersPanel extends JPanel {
                     if (defaultTable.getSelectionModel().isSelectedIndex(viewIndex)) {
                         mapRectangles.computeIfAbsent(i, key -> {
                             // Add new map rectangle
-                            Coordinate topLeft = new Coordinate(bounds.getMaxLat(), bounds.getMinLon());
-                            Coordinate bottomRight = new Coordinate(bounds.getMinLat(), bounds.getMaxLon());
-                            MapRectangle rectangle = new MapRectangleImpl(topLeft, bottomRight);
+                            final var topLeft = new Coordinate(bounds.getMaxLat(), bounds.getMinLon());
+                            final var bottomRight = new Coordinate(bounds.getMinLat(), bounds.getMaxLon());
+                            final var rectangle = new MapRectangleImpl(topLeft, bottomRight);
                             defaultMap.addMapRectangle(rectangle);
                             return rectangle;
                         });
@@ -629,8 +630,8 @@ public class MapWithAIProvidersPanel extends JPanel {
         }
 
         private <T> void doCleanupResidualBounds(Map<Integer, T> map, Consumer<T> removalEffect) {
-            List<Integer> toRemove = new ArrayList<>();
-            for (Integer i : map.keySet()) {
+            final var toRemove = new ArrayList<Integer>();
+            for (var i : map.keySet()) {
                 int viewIndex = defaultTable.convertRowIndexToView(i);
                 if (!defaultTable.getSelectionModel().isSelectedIndex(viewIndex)) {
                     toRemove.add(i);
@@ -647,32 +648,32 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     private class NewEntryAction extends AbstractAction {
 
+        @Serial
         private static final long serialVersionUID = 7451336680150337942L;
 
         NewEntryAction(MapWithAIType type) {
             putValue(NAME, type.toString());
             putValue(SHORT_DESCRIPTION, tr("Add a new {0} entry by entering the URL", type.toString()));
-            String icon = /* ICON(dialogs/) */ "add";
-            new ImageProvider(DIALOG_IMAGES_DIR, icon).getResource().attachImageIcon(this, true);
+            new ImageProvider(DIALOG_IMAGES_DIR, "add").getResource().attachImageIcon(this, true);
         }
 
         @Override
         public void actionPerformed(ActionEvent evt) {
-            final AddMapWithAIPanel p = new AddMapWithAIPanel();
-            final AddMapWithAIDialog addDialog = new AddMapWithAIDialog(gui, p);
+            final var p = new AddMapWithAIPanel();
+            final var addDialog = new AddMapWithAIDialog(gui, p);
             addDialog.showDialog();
 
             if (addDialog.getValue() == 1) {
                 try {
-                    MapWithAIInfo info = p.getSourceInfo();
+                    final var info = p.getSourceInfo();
                     // Fix a possible NPE
                     if (info.getSourceType() == null) {
                         info.setSourceType(MapWithAIType.THIRD_PARTY);
                     }
                     if (MapWithAIType.ESRI == info.getSourceType()) {
-                        final ESRISourceReader reader = new ESRISourceReader(info);
+                        final var reader = new ESRISourceReader(info);
                         try {
-                            for (Future<MapWithAIInfo> i : reader.parse()) {
+                            for (var i : reader.parse()) {
                                 try {
                                     ACTIVE_MODEL.addRow(i.get());
                                 } catch (InterruptedException e) {
@@ -701,6 +702,7 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     private class EditEntryAction extends AbstractAction implements ListSelectionListener {
 
+        @Serial
         private static final long serialVersionUID = -1682304557691078801L;
 
         /**
@@ -725,9 +727,8 @@ public class MapWithAIProvidersPanel extends JPanel {
         @Override
         public void actionPerformed(ActionEvent e) {
             if (activeTable.getSelectedRow() != -1) {
-                final AddMapWithAIPanel p = new AddMapWithAIPanel(
-                        MapWithAILayerTableModel.getRow(activeTable.getSelectedRow()));
-                final AddMapWithAIDialog addDialog = new AddMapWithAIDialog(gui, p);
+                final var p = new AddMapWithAIPanel(MapWithAILayerTableModel.getRow(activeTable.getSelectedRow()));
+                final var addDialog = new AddMapWithAIDialog(gui, p);
                 addDialog.showDialog();
                 if (addDialog.getValue() == 1) {
                     p.getSourceInfo();
@@ -738,6 +739,7 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     private class RemoveEntryAction extends AbstractAction implements ListSelectionListener {
 
+        @Serial
         private static final long serialVersionUID = 2666450386256004180L;
 
         /**
@@ -770,6 +772,7 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     private class ActivateAction extends AbstractAction implements ListSelectionListener, LayerChangeListener {
 
+        @Serial
         private static final long serialVersionUID = -452335751201424801L;
         private final transient ImageResource activate;
         private final transient ImageResource deactivate;
@@ -788,9 +791,8 @@ public class MapWithAIProvidersPanel extends JPanel {
 
         protected void updateEnabledState() {
             setEnabled(defaultTable.getSelectedRowCount() > 0);
-            List<MapWithAIInfo> selected = Arrays.stream(defaultTable.getSelectedRows())
-                    .map(defaultTable::convertRowIndexToModel).mapToObj(MapWithAIDefaultLayerTableModel::getRow)
-                    .collect(Collectors.toList());
+            final var selected = Arrays.stream(defaultTable.getSelectedRows()).map(defaultTable::convertRowIndexToModel)
+                    .mapToObj(MapWithAIDefaultLayerTableModel::getRow).toList();
             if (selected.stream().anyMatch(MapWithAILayerTableModel::doesNotContain)) {
                 activate.attachImageIcon(this, true);
                 putValue(NAME, tr("Activate"));
@@ -817,14 +819,12 @@ public class MapWithAIProvidersPanel extends JPanel {
                         JOptionPane.INFORMATION_MESSAGE);
                 return;
             }
-            List<MapWithAIInfo> selected = Arrays.stream(defaultTable.getSelectedRows())
-                    .map(defaultTable::convertRowIndexToModel).mapToObj(MapWithAIDefaultLayerTableModel::getRow)
-                    .collect(Collectors.toList());
+            final var selected = Arrays.stream(defaultTable.getSelectedRows()).map(defaultTable::convertRowIndexToModel)
+                    .mapToObj(MapWithAIDefaultLayerTableModel::getRow).collect(Collectors.toCollection(ArrayList::new));
             if (selected.stream().anyMatch(MapWithAILayerTableModel::doesNotContain)) {
-                List<MapWithAIInfo> toAdd = selected.stream().filter(MapWithAILayerTableModel::doesNotContain)
-                        .collect(Collectors.toList());
+                final var toAdd = selected.stream().filter(MapWithAILayerTableModel::doesNotContain).toList();
                 activeTable.getSelectionModel().clearSelection();
-                for (MapWithAIInfo info : toAdd) {
+                for (var info : toAdd) {
                     ACTIVE_MODEL.addRow(new MapWithAIInfo(info));
                     int lastLine = ACTIVE_MODEL.getRowCount() - 1;
                     activeTable.getSelectionModel().setSelectionInterval(lastLine, lastLine);
@@ -853,6 +853,7 @@ public class MapWithAIProvidersPanel extends JPanel {
 
     private class ReloadAction extends AbstractAction {
 
+        @Serial
         private static final long serialVersionUID = 7801339998423585685L;
 
         /**
